tests/fixtures/errors/type_mismatch_binding.ore
fn main
  mut x := 42
  x = "hello"
